# TestGen-Agent

./: .gitignore  README.md  dev-setup.bat  dev-setup.sh
backend/: main.py  pyproject.toml  requirements.txt
backend/models/: schemas.py
backend/prompts/: build_fix.yaml  initial_generation.yaml  refinement.yaml
backend/services/: llm_service.py  test_generator.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  FileUploader.tsx  ProjectInput.tsx  TestResults.tsx
frontend/src/services/: apiService.ts
frontend/src/types/: project.ts
frontend/src/utils/: fileParser.ts
