[project]
name = "testgen-agent"
version = "0.1.0"
description = "Unit Test Generator for C++ Applications using AI Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.1",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
]
